--- a/res/layout/splashview.xml
+++ b/res/layout/splashview.xml
@@ -1,8 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="style/translucentActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashActivity" >
+    tools:context=".SplashActivity"
+    android:background="@drawable/bg_welcome" >
 
     <ImageView
         android:layout_width="match_parent"
@@ -13,6 +15,7 @@
         android:scaleType="centerCrop" />
 
     <RelativeLayout
+        android:id="@+id/relativeLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -33,8 +36,7 @@
             android:id="@+id/prbLoad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_alignParentTop="true" />
     </RelativeLayout>
 
 </RelativeLayout>
