--- a/res/layout/guideimg_1.xml
+++ b/res/layout/guideimg_1.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:adjustViewBounds="false"
-        android:background="@drawable/guide_350_01"
+        android:background="@drawable/guide_1"
         android:contentDescription="@string/app_name"
         android:focusable="true"
         android:scaleType="centerCrop" />
