--- a/res/layout/guideimg_4.xml
+++ b/res/layout/guideimg_4.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:adjustViewBounds="false"
-        android:background="@drawable/guide_350_04"
+        android:background="@drawable/guide_4"
         android:contentDescription="@string/app_name"
         android:focusable="true"
         android:scaleType="centerCrop" />
@@ -20,7 +20,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="400dp"
-        android:background="@drawable/whats_new_start_btn"
+        android:background="@drawable/start_btn"
         android:contentDescription="@string/app_name"
         android:focusable="true" />
 
