--- a/res/layout/lbswidget.xml
+++ b/res/layout/lbswidget.xml
@@ -11,7 +11,7 @@
         android:layout_height="32dp"
         android:layout_margin="8dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_play_pin" />
+        android:src="@drawable/ic_info" />
 
     <LinearLayout
         android:layout_width="0dip"
