--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,7 +4,7 @@
 
     <style name="AppTheme" parent="AppBaseTheme"></style>
 
-    <style name="homeActivity">
+    <style name="translucentActivity">
         <item name="android:windowIsTranslucent">true</item>
     </style>
 
@@ -45,17 +45,7 @@
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
-    <style name="MyTheme.NoActionBar.CustomBackground" parent="@android:Theme.NoTitleBar.Fullscreen">
-        <item name="android:windowBackground">@drawable/bg_welcome</item>
-        <item name="android:colorBackgroundCacheHint">@null</item>
-        <item name="android:windowContentOverlay">@null</item>
-    </style>
-
-    <style name="searchTheme" parent="android:Theme.Holo.Light">
-        <item name="android:icon">@drawable/ic_play_pin</item>
-    </style>
-
-    <style name="PopupAnimation" mce_bogus="1" parent="android:Animation">
+    <style name="popupAnimation" mce_bogus="1" parent="android:Animation">
         <item name="android:windowEnterAnimation">@anim/popup_enter</item>
         <item name="android:windowExitAnimation">@anim/popup_exit</item>
     </style>
