--- a/res/layout/splashview.xml
+++ b/res/layout/splashview.xml
@@ -1,10 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    style="style/translucentActivity"
+    style="style/splashTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashActivity"
-    android:background="@drawable/bg_welcome" >
+    android:background="@drawable/bg_welcome"
+    tools:context=".SplashActivity" >
 
     <ImageView
         android:layout_width="match_parent"
