--- a/res/layout/sliderleft.xml
+++ b/res/layout/sliderleft.xml
@@ -32,9 +32,8 @@
                 android:layout_height="32dp"
                 android:layout_gravity="right"
                 android:layout_margin="8dp"
-                android:checked="true"
                 android:text="@string/swtlocation"
-                android:textColor="#ccc"
+                android:textColor="#fff"
                 android:textSize="18sp" />
         </LinearLayout>
 
@@ -53,7 +52,7 @@
                 android:layout_gravity="right"
                 android:layout_margin="8dp"
                 android:text="@string/swtwifi"
-                android:textColor="#ccc"
+                android:textColor="#fff"
                 android:textSize="18sp" />
         </LinearLayout>
 
@@ -72,7 +71,7 @@
                 android:layout_gravity="right"
                 android:layout_margin="8dp"
                 android:text="@string/swtphoto"
-                android:textColor="#ccc"
+                android:textColor="#fff"
                 android:textSize="18sp" />
         </LinearLayout>
     </LinearLayout>
