--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="AppBaseTheme" parent="android:Theme.Light"></style>
+    <style name="AppBaseTheme" parent="android:Theme.Holo.Light"></style>
 
     <style name="AppTheme" parent="AppBaseTheme"></style>
 
@@ -19,22 +19,6 @@
         <item name="android:layout_width">120dp</item>
         <item name="android:layout_height">fill_parent</item>
         <item name="android:background">#000</item>
-    </style>
-
-    <style name="behindMenuScrollContent">
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">fill_parent</item>
-        <item name="android:orientation">vertical</item>
-        <item name="android:padding">8dp</item>
-    </style>
-
-    <style name="behindMenuItemTitle">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">8dp</item>
-        <item name="android:layout_marginBottom">8dp</item>
-        <item name="android:textSize">22sp</item>
-        <item name="android:textColor">#FFFFFF</item>
     </style>
 
     <style name="behindMenuItemLabel">
