--- a/res/layout/activityview.xml
+++ b/res/layout/activityview.xml
@@ -7,6 +7,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@drawable/rp_bg_list" />
 
 </LinearLayout>
