--- a/res/layout/queryresult.xml
+++ b/res/layout/queryresult.xml
@@ -3,6 +3,7 @@
     style="@style/AppBaseTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/rp_bg_list"
     android:orientation="vertical" >
 
     <LinearLayout
@@ -17,7 +18,8 @@
     <ListView
         android:id="@+id/listResult"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="fill_parent"
+        android:background="@drawable/rp_bg_list" >
     </ListView>
 
 </LinearLayout>
