--- a/res/layout/activitylistview.xml
+++ b/res/layout/activitylistview.xml
@@ -3,8 +3,8 @@
     android:id="@+id/activitylistview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/rp_bg_list"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@drawable/rp_bg_list" >
 
     <ListView
         android:id="@+id/activityList"
