--- a/res/layout/homeactivity.xml
+++ b/res/layout/homeactivity.xml
@@ -18,7 +18,6 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_marginBottom="0dp"
         android:layout_marginTop="50dp" >
 
         <RelativeLayout
@@ -85,9 +84,9 @@
 
                 <LinearLayout
                     android:id="@+id/linearLayout1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dip"
                     android:layout_height="48dp"
-                    android:layout_weight="4"
+                    android:layout_weight="1"
                     android:orientation="vertical" >
 
                     <TextView
@@ -113,9 +112,10 @@
 
                 <Button
                     android:id="@+id/btnDetail"
-                    android:layout_width="wrap_content"
+                    android:layout_width="64dp"
                     android:layout_height="fill_parent"
-                    android:layout_weight="1"
+                    android:layout_margin="8dp"
+                    android:background="#ccc"
                     android:text="@string/detail"
                     android:textColor="#333" />
             </LinearLayout>
