--- a/res/layout/sliderleft.xml
+++ b/res/layout/sliderleft.xml
@@ -13,9 +13,11 @@
 
             <ImageView
                 android:id="@+id/imageView1"
-                android:layout_width="64dp"
+                android:layout_width="match_parent"
                 android:layout_height="64dp"
-                android:contentDescription="@string/app_name" />
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/welcome_title" />
+
         </LinearLayout>
 
         <LinearLayout
