--- a/res/layout/splashview.xml
+++ b/res/layout/splashview.xml
@@ -1,42 +1,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    style="style/splashTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_welcome"
-    tools:context=".SplashActivity" >
+    tools:context=".SplashActivity" 
+    android:background="@drawable/bg_welcome">
+    
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:adjustViewBounds="true"
-        android:background="@drawable/bg_welcome"
-        android:contentDescription="@string/app_name"
-        android:scaleType="centerCrop" />
-
-    <RelativeLayout
-        android:id="@+id/relativeLayout1"
+    <ProgressBar
+        android:id="@+id/prbLoad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="250dp" >
-
-        <ImageView
-            android:id="@+id/imgSplash"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/loading"
-            android:visibility="gone" />
-
-        <ProgressBar
-            android:id="@+id/prbLoad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true" />
-    </RelativeLayout>
+        android:paddingBottom="50dp" />
 
 </RelativeLayout>
