--- a/res/layout/guide_pager_four.xml
+++ b/res/layout/guide_pager_four.xml
@@ -17,9 +17,9 @@
         android:id="@+id/imgStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="400dp"
+        android:layout_marginBottom="80dp"
         android:background="@drawable/bg_btn_start"
         android:contentDescription="@string/app_name"
         android:focusable="true" />
